# essay_answers

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  README_portugues.md  api.py  quick_tutorial.ipynb  test_api.py
answer_service/: __init__.py  answer_service.py  answer_service_span.py  encoder.py  text_pre_processor.py
answer_service/sentence_embedding/: CMakeLists.txt  bindings.cpp  build_sentence_embedding.py  sentence_embedding.cpp  sentence_embedding.h
api/: __init__.py  api.py  essay_answers_api.py
tests/: __init__.py  conftest.py  run_checks.py  test_answer_service.py  test_api.py  test_encoder.py  test_essay_answers_api.py  test_text_pre_processor.py
tests/docs/: expected_answers_full_essay.txt  expected_answers_full_essay_based_on_subtitles.txt  full_essay.txt
